validate truncating mutations solve Issue #918

--- a/web/yo/app/styles/main.scss
+++ b/web/yo/app/styles/main.scss
@@ -884,3 +884,14 @@ input[type=radio]:checked + label:before, input[type=checkbox]:checked + label:b
   width: 200px;
   word-break: break-all;
 }
+
+.validResut {
+  color: green;
+}
+.invalidResut {
+  color: red;
+}
+.validationButton {
+  margin-top:-35px;
+  margin-left:800px
+}
